--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col text-center">
-    <img src="../assets/img/{{intentos}}.png" class="ahor">
+    <img src="./assets/img/{{intentos}}.png" class="ahor">
     <h3>Fallas <small>{{intentos}}/9</small></h3>
   </div>
 </div> 
